# MI_3D

./: .gitignore  CMakeLists.txt  Readme.md  generate_dicom.py  imgui.ini
shaders/: basic.frag  basic.vert  debug_quad.frag  raycast_entry.frag  raycast_entry.vert  slice.frag  slice.vert  volume.frag
src/: main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Window.cpp  Window.h
src/medical/: DicomParser.cpp  DicomParser.h  VolumeData.cpp  VolumeData.h
src/renderer/: shader.cpp  shader.h
src/ui/: UIManager.cpp  UIManager.h
